tests/miniJava/neg/004332_mutation.MiniJava
class java { public static void Main ( String [ ] java ) { { } } } class java { public class java { } int [] java ( ) { return 0 ; } }
